--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -35,14 +35,8 @@
 
 @font-face {
   font-family: 'Unbounded';
-  src: url('./Unbounded-Medium.ttf') format('truetype');
-  font-weight: 500;
+  src: url('@/assets/fonts/Unbounded-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
   font-style: normal;
-}
-
-@font-face {
-  font-family: 'Unbounded';
-  src: url('./Unbounded-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-display: swap;
 }
