--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,5 +3,5 @@
   --font-orange: rgb(238, 113, 46);
   --font-orange-05: rgba(238, 113, 46, 0.5);
   --font-gray: rgb(143, 143, 143);
-
+  --border-gray: rgb(56, 56, 56);
 }
