--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,7 +6,10 @@ html {
   font-family: 'Roboto', Arial, sans-serif;
   color: white;
   background-color: var(--black);
-  font-size: clamp(8px, 0.8vw + 2px, 10px);
+  /* font-size: clamp(8px, 0.8vw + 2px, 10px);
+   */
+
+  font-size: calc((1vw + 1vh) / 3);
 }
 
 #app {
@@ -26,35 +29,56 @@ body {
 }
 
 .container {
-  max-width: 1920px;
+  /* max-width: 1920px; */
   width: 100%;
   height: 100%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 0 2rem;
   position: relative;
 }
 
 .view-container {
-  min-height: 800px;
-
-  /* outline: 1px solid white; */
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .mx-auto {
   margin: 0 auto;
 }
 
-.main-window {
-  width: 70%;
-  height: 100%;
-  flex-grow: 1;
-  /* outline: 1px solid white; */
-  padding: 1rem;
-  margin-right: auto;
-  position: relative;
-
-  border-inline-end: 3px solid;
-  border-block-start: 3px solid;
-  border-image-source: radial-gradient(circle at top right, var(--font-orange), transparent 40%);
-  border-image-slice: 1;
+.bg-image-character {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 60vw;
+  opacity: 0.6;
+  filter: brightness(0.8);
+  /* height: 100%; */
+  z-index: -2;
+  object-fit: cover;
+  pointer-events: none;
+  user-select: none;
+}
+.mask {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0.6;
+  z-index: -1;
+  object-fit: cover;
+  pointer-events: none;
+  user-select: none;
+}
+@keyframes border-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
