--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -35,7 +35,7 @@
 
 @font-face {
   font-family: 'Unbounded';
-  src: url('@/assets/fonts/Unbounded-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('/src/styles/fonts/Unbounded-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
