--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -54,8 +54,8 @@ body {
   width: 60vw;
   /* opacity: 0.6; */
   filter: brightness(0.8);
-  /* height: 100%; */
-  z-index: -2;
+  height: 80%;
+  z-index: -9;
   object-fit: cover;
   pointer-events: none;
   user-select: none;
@@ -68,8 +68,9 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
+  /* height: clamp(100px, 20vh, 200px); */
   /* opacity: 0.6; */
-  z-index: -1;
+  z-index: -8;
   object-fit: cover;
   pointer-events: none;
   user-select: none;
