--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -26,6 +26,7 @@ body {
   position: relative;
   margin: 0 auto;
   display: flex;
+  overflow: hidden;
 }
 
 .container {
@@ -47,34 +48,6 @@ body {
   margin: 0 auto;
 }
 
-.bg-image-character {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 60vw;
-  /* opacity: 0.6; */
-  filter: brightness(0.8);
-  height: 80%;
-  z-index: -9;
-  object-fit: cover;
-  pointer-events: none;
-  user-select: none;
-
-  -webkit-mask-image: radial-gradient(ellipse at center, #000 15%, #000 50%, transparent 70%);
-  mask-image: radial-gradient(ellipse at center, #000 15%, #000 50%, transparent 70%);
-}
-.mask {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  /* height: clamp(100px, 20vh, 200px); */
-  /* opacity: 0.6; */
-  z-index: -8;
-  object-fit: cover;
-  pointer-events: none;
-  user-select: none;
-}
 @keyframes border-flow {
   0% {
     background-position: 0% 50%;
