--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,14 +6,12 @@ html {
   font-family: 'Roboto', Arial, sans-serif;
   color: white;
   background-color: var(--black);
-  /* font-size: clamp(8px, 0.8vw + 2px, 10px);
-   */
-
   font-size: calc((1vw + 1vh) / 3);
 }
 
 #app {
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -22,7 +20,6 @@ html {
 body {
   font-size: 1.6rem;
   width: 100%;
-  height: 100vh;
   position: relative;
   margin: 0 auto;
   display: flex;
@@ -30,10 +27,9 @@ body {
 }
 
 .container {
-  /* max-width: 1920px; */
   width: 100%;
-  height: 100%;
-  /* margin: 0 auto; */
+  min-height: 0;
+  flex-grow: 1;
   padding: 0 2rem;
   position: relative;
 }
@@ -42,6 +38,12 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .mx-auto {
