--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -41,7 +41,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  padding: 5rem;
   overflow-y: auto;
   scrollbar-width: none;
 }
