feat(supabase):change character interface acc to db

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -4,4 +4,5 @@
   --font-orange-05: rgba(238, 113, 46, 0.5);
   --font-gray: rgb(143, 143, 143);
   --border-gray: rgb(56, 56, 56);
+  --skills-grid: rgb(43, 43, 43);
 }
