--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -102,3 +102,15 @@ a {
     background-position: 0% 50%;
   }
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
