feat(characters-view): make 3 filters, changed hexagon styles

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,4 +5,10 @@
   --font-gray: rgb(143, 143, 143);
   --border-gray: rgb(56, 56, 56);
   --skills-grid: rgb(43, 43, 43);
+  --sr: rgb(162, 0, 255);
+  --ssr: gold;
+  --slash: rgb(233, 16, 0);
+  --strike: rgb(218, 116, 0);
+  --thrust: rgb(218, 218, 0);
+  --spirit: rgb(0, 132, 255);
 }
