--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,7 @@
 @import url('/src/styles/fonts/fonts.css');
 @import url('/src/styles/colors.css');
 @import url('/src/styles/reset.css');
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap');
 
 html {
   font-family: 'Roboto', Arial, sans-serif;
