feat(characterPageView):fetching info from db & style changes

--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -47,3 +47,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Capture It';
+  src: url('./Capture_it.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
