--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -46,6 +46,7 @@
   src: url('./LondrinaShadow-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
